force-app/main/default/objects/Play_Pause__c/Play_Pause__c.object-meta.xml
<CustomObject>
    <label>Play Pause</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Play Pause #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Play Pauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>