force-app/main/default/objects/Play_Pause__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>animalshelters__Animal__c</referenceTo>
    <relationshipLabel>Play Pauses</relationshipLabel>
    <relationshipName>Play_Pauses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>