force-app/main/default/objects/Play_Pause__c/fields/Animal_Wrong__c.field-meta.xml
<CustomField>
    <fullName>Animal_Wrong__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal_Wrong</label>
    <referenceTo>animalshelters__Animal__c</referenceTo>
    <relationshipLabel>Play Pauses_Wrong</relationshipLabel>
    <relationshipName>Play_Pauses_Wrong</relationshipName>
    <type>Lookup</type>
</CustomField>