force-app/main/default/objects/Play_Pause__c/fields/End_Play_Pause__c.field-meta.xml
<CustomField>
    <fullName>End_Play_Pause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Play Pause</label>
    <type>Checkbox</type>
</CustomField>