force-app/main/default/objects/Play_Pause__c/fields/Play_Pause_Notes__c.field-meta.xml
<CustomField>
    <fullName>Play_Pause_Notes__c</fullName>
    <label>Play Pause Notes</label>
    <type>TextArea</type>
</CustomField>