force-app/main/default/objects/Play_Pause__c/fields/Play_Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Play_Pause_Reason__c</fullName>
    <label>Play Pause Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Heat</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Lameness</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Spay/Neuter</fullName>
            </value>
            <value>
                <fullName>Bite Quarantine</fullName>
            </value>
            <value>
                <fullName>Medical Quarantine</fullName>
            </value>
            <value>
                <fullName>Cardiac Condition</fullName>
            </value>
            <value>
                <fullName>Nursing Dam</fullName>
            </value>
            <value>
                <fullName>Needs a Break</fullName>
            </value>
            <value>
                <fullName>Bad Session</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>