force-app/main/default/objects/Play_Pause__c/validationRules/End_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;Behavioral&quot;) ,ISNULL(End_Date__c))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date is required.</errorMessage>
</ValidationRule>